--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <div>This is my portfolio website</div>
     <h1>My Name Is Md : Abu Bakar Siddique</h1>
+    <div>My Skills</div>
+    <span>Html</span>
+    <span>Css</span>
 </body>
 </html>
